Formatted & Updated Backend Process Structure
Multiple md planning files were added to the /planning dir.

Furthermore the backend /lib folder now contains proper abstraction for each window creation and window-settings function.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start-backend-dev": "npm run build-backend && electron .",
     "build-backend": "(cd backend && npm run build && cd .. )",
     "dev-ui": "(cd ui && npm run dev-ui)",
-    "build": "(cd ui && npm run build && cd ..) && npm run build-backend && electron-builder",
+    "build": "npm run install-deps && (cd ui && npm run build && cd ..) && npm run build-backend && electron-builder",
     "dev": "(cd ui && npm run build && cd ..) && npm run start-backend-dev"
   },
   "repository": {
